gitops/Argocd/examples/simple/workflows/generic/monitoredRepos/gitops-deploy.event-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitops-deploy-eventsource-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    eventsource-name: gitops-deploy
  type: NodePort
