gitops/Argocd/examples/simple/workflows/generic/monitoredRepos/gitops-deploy-workflow-templates.ingress.yaml
# Setup the ingress for the service
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitops-workflow-templates
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - http:
        paths:
          - path: /webhooks/gitops-deploy/github-reposrc
            backend:
              service:
                name: gitops-deploy-eventsource-svc
                port:
                  number: 80
            pathType: Prefix
      # You will need to customise this as appropriate
      host: argorestapi.ukwest.cloudapp.azure.com
